--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-menu-bar></app-menu-bar>
+<app-left-bar></app-left-bar>
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
