--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,3 +1,7 @@
 <ul class="menu-content">
-  <li *ngFor="let m of menuOptions" class="fade-in-effect" [class]="getClass(m)" [class.menu-hidden]="m?.visible === false" (click)="onMenuClick(m)"><label>{{m?.description}}</label></li>
+  <li *ngFor="let m of menuOptions" class="fade-in-effect" [class]="getClass(m)" [class.menu-hidden]="m?.visible === false"
+    (click)="onMenuClick(m)">
+    <label>
+      <span *ngIf="m?.title" class="glyphicon glyphicon-envelope" style="margin-right: 5px"></span>{{m?.description}}</label>
+  </li>
 </ul>
