--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,19 @@
-<app-left-bar></app-left-bar>
+<div class="app-container-left">
+  <app-left-bar></app-left-bar>
+</div>
+<div class="app-container-right">
+  <app-chat></app-chat>
+</div>
+
+
+
+
+
+
+
+
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     {{ helloResponse }}
   </h1>
@@ -24,4 +37,4 @@
       <a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a>
     </h2>
   </li>
-</ul>
+</ul> -->
