--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -7,7 +7,7 @@
           <div class="message-dropdown" style="float:right;">
             <div class="message-dropbtn">...</div>
             <div class="message-dropdown-content">
-              <a (click)="onResponseMessageClick(m)" href="#">Responder</a>
+              <a (click)="onResponseMessageClick(m)" style="cursor: pointer;">Responder</a>
             </div>
           </div>
         </div>
