--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,6 @@
-<div class="app-container-left">
-  <app-left-bar></app-left-bar>
+<div *ngIf="!route.isActive('/', true)">
+  <div class="app-container-left">
+    <app-left-bar></app-left-bar>
+  </div>
 </div>
-<div class="app-container-right">
-  <app-chat></app-chat>
-</div>
-
-
-
-
-
-
-
-
-<!--The content below is only a placeholder and can be replaced.-->
-<!-- <div style="text-align:center">
-  <h1>
-    {{ helloResponse }}
-  </h1>
-  <input type="text" [(ngModel)]="name">
-  <button (click)="onSendClick()">Send</button>
-</div>
-<h2>Here are some links to help you start: </h2>
-<ul>
-  <li>
-    <h2>
-      <a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a>
-    </h2>
-  </li>
-  <li>
-    <h2>
-      <a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a>
-    </h2>
-  </li>
-  <li>
-    <h2>
-      <a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a>
-    </h2>
-  </li>
-</ul> -->
+<router-outlet></router-outlet>
