--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+.app-container-left {
+    height: calc(100vh);
+    float: left;
+}
+
+.app-container-right {
+    height: calc(100vh);
+    float: right;
+    width: calc(100% - 230px);
+}
+
+@media only screen and (max-width: 480px){
+    .app-container-left {
+       width: 100%;
+       height: 30px;
+    }
+    
+    .app-container-right {
+        height: calc(100vh - 30px);
+        width: 100%;
+    }
+}
 
 label {
     margin-bottom: 0px !important;
