--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div *ngIf="!route.isActive('/', true)">
-  <div class="app-container-left">
-    <app-left-bar></app-left-bar>
-  </div>
+  <app-menu-bar></app-menu-bar>
 </div>
 <router-outlet></router-outlet>
