--- a/src/app/menu-bar/menu-bar.component.css
+++ b/src/app/menu-bar/menu-bar.component.css
@@ -1,49 +1,65 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 230px;
-    background-color: #404a4e;
-    color: white;
-}
-
-li label {
-    display: block;
-    color: #fff;
-    padding: 8px 16px;
-    text-decoration: none;
-    font-weight: normal;
-}
-
-li label:hover {
-    background-color: #404a4e;
-    color: white !important;
-}
-
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.menu-click {
-    background-color: #404a4e !important;
-}
-
-.menu-title {
-    border-top: 1px solid #555;
-    background-color: #313b3f !important;
-    font-weight: bold !important;
-}
-
-.menu-title label {
-    padding-left: 20px !important;
-    color: #9ba5ac !important;
-}
-
 .menu-hidden {
+    display: none !important;
+}
+
+/* The side navigation menu */
+.sidenav {
+    height: calc(100vh); /* 100% Full-height */
+    width: 230px; 
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black*/
+    overflow-x: scroll; /* Enable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
     display: none;
 }
 
-.clickable {
-    cursor: pointer !important;
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left .5s;
+    padding: 20px;
+}
+
+.show-menu {
+    width: 100%;
+    position: absolute;
+    background-color: #111;
+    /* height: 30px; */
+    display: none;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .show-menu {display: inline;}
+    .closebtn {display: inline;}
+    .logo {display: none;}
+    .sidenav {width: 0 !important;}
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
