--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,9 +2,9 @@
     position: fixed;
     top: 0;
     left: 0;
-    /* Preserve aspet ratio */
     min-width: 100%;
     min-height: 100%;
+    content: url('/assets/login-back.jpg')
 }
 
 .login-back {
