--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<img src="/assets/login-back.jpg" id="bg" alt="">
+<img id="bg">
 <div class="padding-login login-back" autocomplete="off">
   <div class="login-container">
     <div class="login-header">
