--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,3 +1,15 @@
+.chat-container {
+    float: left;
+    width: calc(100% - 200px);
+}
+
+.contact-content {
+    float: right;
+    height: calc(100vh - 100px);
+    width: 200px;
+    overflow-y: scroll;
+    border-left: 1px solid #818181;
+}
 .chat-content {
     position: relative;
     min-height: 150px;
@@ -10,9 +22,11 @@
 }
 
 .messages-container {
+    padding: 10px;
     --heightA: calc(100vh - 100px);
     --heightB: calc(var(--heightA) - 139px);
     height: var(--heightB);
+    /* width: calc(100% - 380px); */
     overflow-y: auto;
 }
 
@@ -25,7 +39,7 @@
     bottom: 0;
     left: calc(100% - 230px)px;
     padding: 10px;
-    width: calc(100% - 230px);
+    width: calc(100% - 430px);
 }
 
 .message-footer {
@@ -81,4 +95,16 @@
 
 .message-dropdown:hover .message-dropbtn {
     font-weight: bold;
+}
+
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.dot-active {
+    background-color: green;
 }
