--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,41 @@
 <div class="app-container-right">
-  <app-chat></app-chat>
+  <div class="home-container">
+    <div class="home-header">
+      <h2>Atividades Práticas Supervisionadas (APS)</h2>
+    </div>
+    <div class="home-content">
+      <h3>
+        I. TEMA:
+      </h3>
+      <h4>
+        “DESENVOLVIMENTO DE UMA FERRAMENTA PARA COMUNICAÇÃO EM REDE”
+      </h4>
+      <h3>
+        II. PROPOSTA DO TRABALHO
+      </h3>
+      <h4>
+        As Atividades Práticas Supervisionadas serão constituídas da seguinte forma:
+      </h4>
+      <p>Pede-se aos alunos que desenvolvam em Java ou C# uma ferramenta para comunicação em rede. O grupo deverá criar uma
+        aplicação que permita que duas ou mais pessoas possam se comunicar em uma rede, utilizando o protocolo TCP/IP. </p>
+      <p>A ferramenta terá que ser utilizada no seguinte caso: a Secretaria de Estado do Meio Ambiente deseja saber quais atividades
+        industriais estão gerando poluição do Rio Tietê desde sua nascente em Salesópolis (SP) até a sua passagem pela região
+        da grande São Paulo. Para tal ela precisa trocar informações das equipes de inspetores treinados e capacitados que
+        estarão se revezando dentro de cada indústria, controlando os processos e passando informações online para a Secretaria.</p>
+      <p> Além da comunicação, outros elementos poderão ser acrescidos, tais como: componentes gráficos, emoticons, transferência
+        de arquivos, comunicação multicast, e-mail, webcam, etc. O nível de complexidade e de recursos acrescidos afetarão
+        diretamente a nota final do grupo.</p>
+      <p> O trabalho deve apresentar, no mínimo, duas formas de comunicação:
+      </p>
+      <p> A) através de chat (obrigatória para todos os grupos) </p>
+      <p>B) uma segunda forma de comunicação a ser combinada em classe com o professor. Deve ser implementado um banco de dados
+        de logins e senhas válidas e suas respectivas funções de manutenção.</p>
+      Observações:
+      <p>1) Deverão ser utilizadas para a comunicação de dados as primitivas dos Soquetes de Berkeley, ou componentes derivados
+        destes. </p>
+      <p>2) O grupo deverá fazer uma dissertação sobre todos os elementos utilizados no desenvolvimento do projeto acima, assim
+        como o efeito desse trabalho na sua formação e discutir a interdisciplinaridade envolvida no mesmo.</p>
+
+    </div>
+  </div>
 </div>
