--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,51 @@
-<p>
-  user works!
-</p>
+<div class="app-container-right">
+  <div class="user-container">
+    <h3>Gestão de usuários</h3>
+    <div class="form-group">
+      <label for="email">Nome:</label>
+      <input type="email" class="form-control" id="email" [(ngModel)]="user.name">
+    </div>
+
+    <div class="form-group">
+      <label for="pwd">Username:</label>
+      <input type="text" class="form-control" id="username" [(ngModel)]="user.user.username" (change)="onUsernameChange()">
+    </div>
+
+    <div class="form-group">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="pwd" [(ngModel)]="user.user.password">
+    </div>
+
+    <div class="form-group">
+      <label for="sel1">Perfil:</label>
+      <select [(ngModel)]="user.user.profile" class="form-control" id="sel1">
+        <option value="null" selected disabled>Selecione</option>
+        <option *ngFor="let p of profiles" [ngValue]="p">{{p.description}}</option>
+      </select>
+    </div>
+
+    <div style="text-align: right;">
+      <button type="button" class="btn btn-default" (click)="onNovoClick()">Novo</button>
+      <button type="button" class="btn btn-default" (click)="onSalvarClick()">Salvar</button>
+    </div>
+
+    <div class="container">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Perfil</th>
+          </tr>
+        </thead>
+        <tbody>
+          <ng-container *ngFor="let insp of users">
+            <tr (click)="onUserSelect(insp)">
+              <td>{{insp.name}}</td>
+              <td>{{insp.user.profile.description}}</td>
+            </tr>
+          </ng-container>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
